@@ -1,3 +1,8 @@
+Fri Oct 12 11:57:50 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/manconv.c (try_iconv): If we need to try the next encoding in
+	  the list, make sure to do that before writing the output buffer.
+
 Fri Oct 12 10:21:07 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/whatis.c (use_grep): Add trailing newline to debugging output.
